--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -150,6 +150,24 @@
                         </a>
                     </li>
                     <li>
+                        <!-- Adsterra -->
+                        <div class="section inset mt-2" style="margin-bottom: 16px !important;">
+                            <div class="wide-block pt-2 pb-2">
+                                <script type="text/javascript">
+                                    atOptions = {
+                                        'key': '9b3086d67f2efeab65a73c3a14c43f84',
+                                        'format': 'iframe',
+                                        'height': 250,
+                                        'width': 300,
+                                        'params': {}
+                                    };
+                                    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
+                                </script>
+                            </div>
+                        </div>
+                        <!-- * Adsterra -->
+                    </li>
+                    <li>
                         <a href="http://bpka.jogjaprov.go.id/samsat/" target="_blank" class="item" rel="noopener">
                             <div class="imageWrapper">
                                 <img src="assets/img/logo-provinsi/Logo_Yogyakarta.webp" width="64" height="64"
@@ -213,6 +231,24 @@
                                 </div>
                             </div>
                         </a>
+                    </li>
+                    <li>
+                        <!-- Adsterra -->
+                        <div class="section inset mt-2" style="margin-bottom: 16px !important;">
+                            <div class="wide-block pt-2 pb-2">
+                                <script type="text/javascript">
+                                    atOptions = {
+                                        'key': '9b3086d67f2efeab65a73c3a14c43f84',
+                                        'format': 'iframe',
+                                        'height': 250,
+                                        'width': 300,
+                                        'params': {}
+                                    };
+                                    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
+                                </script>
+                            </div>
+                        </div>
+                        <!-- * Adsterra -->
                     </li>
                     <li>
                         <a href="https://bpprd.sumutprov.go.id/e-samsat/pages/index.php?temp=menu3" target="_blank"
@@ -280,6 +316,24 @@
                                 </div>
                             </div>
                         </a>
+                    </li>
+                    <li>
+                        <!-- Adsterra -->
+                        <div class="section inset mt-2" style="margin-bottom: 16px !important;">
+                            <div class="wide-block pt-2 pb-2">
+                                <script type="text/javascript">
+                                    atOptions = {
+                                        'key': '9b3086d67f2efeab65a73c3a14c43f84',
+                                        'format': 'iframe',
+                                        'height': 250,
+                                        'width': 300,
+                                        'params': {}
+                                    };
+                                    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
+                                </script>
+                            </div>
+                        </div>
+                        <!-- * Adsterra -->
                     </li>
                     <li>
                         <a href="http://bapenda.sultengprov.go.id/pkb" target="_blank" class="item" rel="noopener">
