--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,23 @@
                 </a>
                 <!-- * Go To Top -->
 
+                <!-- Adsterra -->
+                <div class="section inset mt-2">
+                    <div class="wide-block pt-2 pb-2">
+                        <script type="text/javascript">
+                            atOptions = {
+                                'key': '9b3086d67f2efeab65a73c3a14c43f84',
+                                'format': 'iframe',
+                                'height': 250,
+                                'width': 300,
+                                'params': {}
+                            };
+                            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
+                        </script>
+                    </div>
+                </div>
+                <!-- * Adsterra -->
+
                 <div class="section mt-3 mb-3">
                     <div class="card">
                         <img src="assets/img/banner/Berita-samsat.webp" width="328" height="164" class="card-img-top"
@@ -107,6 +124,23 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Adsterra -->
+                <div class="section inset mt-2" style="margin-bottom: 16px !important;">
+                    <div class="wide-block pt-2 pb-2">
+                        <script type="text/javascript">
+                            atOptions = {
+                                'key': '9b3086d67f2efeab65a73c3a14c43f84',
+                                'format': 'iframe',
+                                'height': 250,
+                                'width': 300,
+                                'params': {}
+                            };
+                            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
+                        </script>
+                    </div>
+                </div>
+                <!-- * Adsterra -->
 
                 <!-- app footer -->
                 <footer role="contentinfo">
