--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -496,10 +496,30 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Adsterra -->
+                    <div class="section inset mt-2">
+                        <div class="wide-block pt-2 pb-2">
+                            <script type="text/javascript">
+                                atOptions = {
+                                    'key': '9b3086d67f2efeab65a73c3a14c43f84',
+                                    'format': 'iframe',
+                                    'height': 250,
+                                    'width': 300,
+                                    'params': {}
+                                };
+                                document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
+                            </script>
+                        </div>
+                    </div>
+                    <!-- * Adsterra -->
+
                 </div>
             </div>
+
         </aside>
         <!-- * App Capsule -->
+
     </main>
     <!-- * Main -->
 
