--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -236,16 +236,11 @@
                         <!-- Adsterra -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
-                                <script type="text/javascript">
-                                    atOptions = {
-                                        'key': '9b3086d67f2efeab65a73c3a14c43f84',
-                                        'format': 'iframe',
-                                        'height': 250,
-                                        'width': 300,
-                                        'params': {}
-                                    };
-                                    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
-                                </script>
+                                <div class="adbox adbox-300-250">
+                                    <a href="https://180.210.206.246/link.php?member=pegolas" target="_blank">
+                                        <img src="assets/img/banner/Dewa_Togel_Slot_Game.webp" alt="Dewa Togel Slot">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <!-- * Adsterra -->
@@ -321,16 +316,11 @@
                         <!-- Adsterra -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
-                                <script type="text/javascript">
-                                    atOptions = {
-                                        'key': '9b3086d67f2efeab65a73c3a14c43f84',
-                                        'format': 'iframe',
-                                        'height': 250,
-                                        'width': 300,
-                                        'params': {}
-                                    };
-                                    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
-                                </script>
+                                <div class="adbox adbox-300-250">
+                                    <a href="https://180.210.206.246/link.php?member=pegolas" target="_blank">
+                                        <img src="assets/img/banner/Dewa_Togel_Slot_1_Milyar.webp" alt="Dewa Togel Slot">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <!-- * Adsterra -->
