--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Cek Pajak Online</title>
+    <title>Cek Pajak Kendaraan Bermotor Online</title>
     <meta name="description" content="Cek Pajak Kendaraan Bermotor Mobil Motor Samsat Online Se-Indonesia">
     <meta name="keywords" content="Cek Pajak, Kendaraan Bermotor, Mobil, Motor ,Samsat, Online, Indonesia" />
     <meta property="og:title" content="Info Samsat" />
@@ -150,22 +150,19 @@
                         </a>
                     </li>
                     <li>
-                        <!-- Adsterra -->
+                        <!-- Ads -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
-                                <script type="text/javascript">
-                                    atOptions = {
-                                        'key': '9b3086d67f2efeab65a73c3a14c43f84',
-                                        'format': 'iframe',
-                                        'height': 250,
-                                        'width': 300,
-                                        'params': {}
-                                    };
-                                    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
-                                </script>
+                                <div class="adbox adbox-300-250">
+                                    <a href="https://c.lazada.co.id/t/c.0ADLGF?sub_aff_id=jas_hujan&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fjas-hujan-jaket-celana-twin-elephant-jas-hujan-murah-mantel-i4285410556-s11357302088.html"
+                                        target="_blank">
+                                        <img src="assets/img/banner/Jas-Hujan-Murah-Lazada.webp"
+                                            alt="Jas Hujan Murah Lazada">
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <!-- * Adsterra -->
+                        <!-- * Ads -->
                     </li>
                     <li>
                         <a href="http://bpka.jogjaprov.go.id/samsat/" target="_blank" class="item" rel="noopener">
@@ -233,17 +230,19 @@
                         </a>
                     </li>
                     <li>
-                        <!-- Adsterra -->
+                        <!-- Ads -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-250">
-                                    <a href="https://180.210.206.246/link.php?member=pegolas" target="_blank">
-                                        <img src="assets/img/banner/Dewa-Togel-Slot-Game.webp" alt="Dewa Togel Slot">
+                                    <a href="https://c.lazada.co.id/t/c.0ADLuY?sub_aff_id=masker_buff&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fmasker-buff-bandana-berkendara-motor-premium-underarmour-i5795306081-s11252688655.html"
+                                        target="_blank">
+                                        <img src="assets/img/banner/masker-buff-murah.webp"
+                                            alt="Jual Masker Buff Underarmor Murah Lazada">
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <!-- * Adsterra -->
+                        <!-- * Ads -->
                     </li>
                     <li>
                         <a href="https://bpprd.sumutprov.go.id/e-samsat/pages/index.php?temp=menu3" target="_blank"
@@ -313,17 +312,19 @@
                         </a>
                     </li>
                     <li>
-                        <!-- Adsterra -->
+                        <!-- Ads -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-250">
-                                    <a href="https://180.210.206.246/link.php?member=pegolas" target="_blank">
-                                        <img src="assets/img/banner/Dewa_Togel_Slot_1_Milyar.webp" alt="Dewa Togel Slot">
+                                    <a href="https://c.lazada.co.id/t/c.0ADKGY?sub_aff_id=google_ski&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fdiskon-taffsport-uv400-kacamata-goggles-ski-kacamata-google-glasses-goggle-ski-kacamata-cross-traiil-retro-retro-anti-glare-windproof-goggles-ski-kacamata-goggles-ski-i4199508899-s7084182326.html"
+                                        target="_blank">
+                                        <img src="assets/img/banner/kacamata-google-ski-murah.webp"
+                                            alt="Jual Kacamata Google Cross Murah Lazada">
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <!-- * Adsterra -->
+                        <!-- * Ads -->
                     </li>
                     <li>
                         <a href="http://bapenda.sultengprov.go.id/pkb" target="_blank" class="item" rel="noopener">
