--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#000000">
-    <title>Syarat, Proses dan Cara</title>
+    <title>Syarat, Proses dan Cara Balik Nama dan Mutasi Kendaraan</title>
     <meta name="description"
         content="Syarat, Proses dan Cara Bayar Pajak, Mutasi, Balik Nama, Kehilangan STNK Kendaraan Bermotor baik jenis Motor maupun Mobil">
     <meta name="keywords"
