--- a/public/index.html
+++ b/public/index.html
@@ -88,22 +88,18 @@
                 </a>
                 <!-- * Go To Top -->
 
-                <!-- Adsterra -->
-                <div class="section inset mt-2">
+                <!-- Ads -->
+                <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
-                        <script type="text/javascript">
-                            atOptions = {
-                                'key': '9b3086d67f2efeab65a73c3a14c43f84',
-                                'format': 'iframe',
-                                'height': 250,
-                                'width': 300,
-                                'params': {}
-                            };
-                            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.variousformatscontent.com/9b3086d67f2efeab65a73c3a14c43f84/invoke.js"></scr' + 'ipt>');
-                        </script>
+                        <div class="adbox adbox-300-250">
+                            <a href="https://c.lazada.co.id/t/c.0ADKto?sub_aff_id=helm_motor&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fgratis-1-masker-helm-helm-ink-replika-centro-warna-putih-metalik-double-visor-i5247312905-s10032614926.html"
+                                target="_blank">
+                                <img src="assets/img/banner/Helm-INK-Centro-murah.webp" alt="Jual Helm INK Centro Murah Lazada">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <!-- * Adsterra -->
+                <!-- * Ads -->
 
                 <div class="section mt-3 mb-3">
                     <div class="card">
@@ -125,17 +121,18 @@
                     </div>
                 </div>
 
-                <!-- Adsterra -->
+                <!-- Ads -->
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-250">
-                            <a href="https://180.210.206.246/link.php?member=pegolas" target="_blank">
-                                <img src="assets/img/banner/Dewa-Togel-Slot-Game.webp" alt="Dewa Togel Slot">
+                            <a href="https://c.lazada.co.id/t/c.0ADLGF?sub_aff_id=jas_hujan&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fjas-hujan-jaket-celana-twin-elephant-jas-hujan-murah-mantel-i4285410556-s11357302088.html"
+                                target="_blank">
+                                <img src="assets/img/banner/Jas-Hujan-Murah-Lazada.webp" alt="Jas Hujan Murah Lazada">
                             </a>
                         </div>
                     </div>
                 </div>
-                <!-- * Adsterra -->
+                <!-- * Ads -->
 
                 <!-- app footer -->
                 <footer role="contentinfo">
