--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -497,17 +497,19 @@
                         </div>
                     </div>
 
-                    <!-- Adsterra -->
+                    <!-- Ads -->
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
                             <div class="adbox adbox-300-250">
-                                <a href="https://180.210.206.246/link.php?member=pegolas" target="_blank">
-                                    <img src="assets/img/banner/Dewa-Togel-Slot-Game.webp" alt="Dewa Togel Slot">
+                                <a href="https://c.lazada.co.id/t/c.0ADKto?sub_aff_id=helm_motor&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fgratis-1-masker-helm-helm-ink-replika-centro-warna-putih-metalik-double-visor-i5247312905-s10032614926.html"
+                                    target="_blank">
+                                    <img src="assets/img/banner/Helm-INK-Centro-murah.webp"
+                                        alt="Jual Helm INK Centro Murah Lazada">
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <!-- * Adsterra -->
+                    <!-- * Ads -->
 
                 </div>
             </div>
