--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -1046,17 +1046,19 @@
                         </div>
 
                     </div>
-                    <!-- Adsterra -->
+                    <!-- Ads -->
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
                             <div class="adbox adbox-300-250">
-                                <a href="https://180.210.206.246/link.php?member=pegolas" target="_blank">
-                                    <img src="assets/img/banner/Dewa-Togel-Slot-Game.webp" alt="Dewa Togel Slot">
+                                <a href="https://c.lazada.co.id/t/c.0ADLGF?sub_aff_id=jas_hujan&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fjas-hujan-jaket-celana-twin-elephant-jas-hujan-murah-mantel-i4285410556-s11357302088.html"
+                                    target="_blank">
+                                    <img src="assets/img/banner/Jas-Hujan-Murah-Lazada.webp"
+                                        alt="Jas Hujan Murah Lazada">
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <!-- * Adsterra -->
+                    <!-- * Ads -->
 
                 </div>
             </div>
