--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -154,10 +154,9 @@
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-250">
-                                    <a href="https://c.lazada.co.id/t/c.0ADLGF?sub_aff_id=jas_hujan&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fjas-hujan-jaket-celana-twin-elephant-jas-hujan-murah-mantel-i4285410556-s11357302088.html"
+                                    <a href="https://c.lazada.co.id/t/c.ba2dwF"
                                         target="_blank">
-                                        <img src="assets/img/banner/Jas-Hujan-Murah-Lazada.webp"
-                                            alt="Jas Hujan Murah Lazada">
+                                        <img src="https://sg-test-11.slatic.net/other/lzd-ad/e1d2e09f68a85f1a579cf814a80a517c.jpeg">
                                     </a>
                                 </div>
                             </div>
@@ -234,10 +233,9 @@
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-250">
-                                    <a href="https://c.lazada.co.id/t/c.0ADLuY?sub_aff_id=masker_buff&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fmasker-buff-bandana-berkendara-motor-premium-underarmour-i5795306081-s11252688655.html"
+                                    <a href="https://c.lazada.co.id/t/c.ba24Rx"
                                         target="_blank">
-                                        <img src="assets/img/banner/masker-buff-murah.webp"
-                                            alt="Jual Masker Buff Underarmor Murah Lazada">
+                                        <img src="https://sg-test-11.slatic.net/other/lzd-ad/4e804909e5ef69683d57cfcc939135fa.jpeg">
                                     </a>
                                 </div>
                             </div>
@@ -316,10 +314,9 @@
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-250">
-                                    <a href="https://c.lazada.co.id/t/c.0ADKGY?sub_aff_id=google_ski&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fdiskon-taffsport-uv400-kacamata-goggles-ski-kacamata-google-glasses-goggle-ski-kacamata-cross-traiil-retro-retro-anti-glare-windproof-goggles-ski-kacamata-goggles-ski-i4199508899-s7084182326.html"
+                                    <a href="https://c.lazada.co.id/t/c.ba24RC"
                                         target="_blank">
-                                        <img src="assets/img/banner/kacamata-google-ski-murah.webp"
-                                            alt="Jual Kacamata Google Cross Murah Lazada">
+                                        <img src="https://sg-test-11.slatic.net/other/lzd-ad/4169b7cab7226c62d08e3ae96d456c28.jpeg">
                                     </a>
                                 </div>
                             </div>
