--- a/public/index.html
+++ b/public/index.html
@@ -92,9 +92,9 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-250">
-                            <a href="https://c.lazada.co.id/t/c.0ADKto?sub_aff_id=helm_motor&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fgratis-1-masker-helm-helm-ink-replika-centro-warna-putih-metalik-double-visor-i5247312905-s10032614926.html"
+                            <a href="https://pages.lazada.co.id/wow/i/id/marketing/ams_lp?hybrid=1&campaignId=111&sub_aff_id=Campaign_01&exlaz=e_p7x5SC7Bxa071Q7aUGVsOEWlwZOCkmxpCbqqRvzXwEesYucyl11YNl8KvE3ni9G6%252BtXla0xcn2Iqsdx3KpAaUhpMCC1hdTYHgFmmQbI0tCMnDeV2b90Fbo%252BlFN%252BSx3FPP9V4pMxzJ%252B0%253D"
                                 target="_blank">
-                                <img src="assets/img/banner/Helm-INK-Centro-murah.webp" alt="Jual Helm INK Centro Murah Lazada">
+                                <img src="assets/img/banner/Lazada_Murah_Nampol_Serba_9_Ribu.webp">
                             </a>
                         </div>
                     </div>
@@ -125,9 +125,9 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-250">
-                            <a href="https://c.lazada.co.id/t/c.0ADLGF?sub_aff_id=jas_hujan&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fjas-hujan-jaket-celana-twin-elephant-jas-hujan-murah-mantel-i4285410556-s11357302088.html"
+                            <a href="https://pages.lazada.co.id/wow/gcp/route/lazada/id/upr_1000345_lazada/channel/id/upr-router/id_upr?spm=a2o4j.home.feature_nav.4.57997838xsGzMr&hybrid=1&data_prefetch=true&wh_pid=/lazada/channel/id/voucher/claimvoucher&scm=1003.4.icms-zebra-5000383-2586266.OTHER_6038388111_7046561&prefetch_replace=1&sub_aff_id=Campaign_02&exlaz=e_Xl%252Be9niZtII71Q7aUGVsOEWlwZOCkmxpH31C%252BaV0jw3WvlPq3H1LQF8KvE3ni9G6%252BtXla0xcn2Iqsdx3KpAaUhpMCC1hdTYHgFmmQbI0tCMnDeV2b90FbkATuhdapzogeW1tYIAEvMw%253D"
                                 target="_blank">
-                                <img src="assets/img/banner/Jas-Hujan-Murah-Lazada.webp" alt="Jas Hujan Murah Lazada">
+                                <img src="assets/img/banner/Voucher_Belanja_Lazada.webp">
                             </a>
                         </div>
                     </div>
