--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -1050,10 +1050,9 @@
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
                             <div class="adbox adbox-300-250">
-                                <a href="https://c.lazada.co.id/t/c.0ADLGF?sub_aff_id=jas_hujan&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fjas-hujan-jaket-celana-twin-elephant-jas-hujan-murah-mantel-i4285410556-s11357302088.html"
+                                <a href="https://c.lazada.co.id/t/c.ba2XPt"
                                     target="_blank">
-                                    <img src="assets/img/banner/Jas-Hujan-Murah-Lazada.webp"
-                                        alt="Jas Hujan Murah Lazada">
+                                    <img src="https://sg-test-11.slatic.net/other/lzd-ad/5937f535434b76c181d012beab9c5a85.jpeg">
                                 </a>
                             </div>
                         </div>
