--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -501,10 +501,9 @@
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
                             <div class="adbox adbox-300-250">
-                                <a href="https://c.lazada.co.id/t/c.0ADKto?sub_aff_id=helm_motor&url=https%3A%2F%2Fwww.lazada.co.id%2Fproducts%2Fgratis-1-masker-helm-helm-ink-replika-centro-warna-putih-metalik-double-visor-i5247312905-s10032614926.html"
+                                <a href="https://c.lazada.co.id/t/c.ba2XPu"
                                     target="_blank">
-                                    <img src="assets/img/banner/Helm-INK-Centro-murah.webp"
-                                        alt="Jual Helm INK Centro Murah Lazada">
+                                    <img src="https://sg-test-11.slatic.net/other/lzd-ad/07206261ed7a9fedcf0192b3633d9c32.jpeg">
                                 </a>
                             </div>
                         </div>
