--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -27,13 +27,17 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7BEWWEY6N"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-
         function gtag() {
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
 
         gtag('config', 'G-Z7BEWWEY6N');
+    </script>
+    <script>
+        gtag('event', 'conversion', {
+            'send_to': 'AW-822473348/Zg56CI-Gt5IDEITll4gD'
+        });
     </script>
 </head>
 
