--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
     <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <link rel="manifest" href="__manifest.json">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+        crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z7BEWWEY6N"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -98,7 +99,15 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-250">
-                            
+                            <script async
+                                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+                                crossorigin="anonymous"></script>
+                            <!-- Iklan Display -->
+                            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7701478875963146"
+                                data-ad-slot="8029254369" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                            <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                            </script>
                         </div>
                     </div>
                 </div>
@@ -128,7 +137,15 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-250">
-                            
+                            <script async
+                                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
+                                crossorigin="anonymous"></script>
+                            <!-- Iklan Display -->
+                            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7701478875963146"
+                                data-ad-slot="8029254369" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                            <script>
+                                (adsbygoogle = window.adsbygoogle || []).push({});
+                            </script>
                         </div>
                     </div>
                 </div>
