--- a/public/index.html
+++ b/public/index.html
@@ -99,15 +99,10 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-250">
-                            <script async
-                                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
-                                crossorigin="anonymous"></script>
-                            <!-- Iklan Display -->
-                            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7701478875963146"
-                                data-ad-slot="8029254369" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                            <script>
-                                (adsbygoogle = window.adsbygoogle || []).push({});
-                            </script>
+                            <a href="https://clicks.pipaffiliates.com/c?c=649840&l=id&p=0">
+                                <img src="assets/img/banner/Trading_Bitcoin_XM_Indonesia.webp" width="300" height="250"
+                                    class="card-img-top" alt="image">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -137,15 +132,10 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-250">
-                            <script async
-                                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7701478875963146"
-                                crossorigin="anonymous"></script>
-                            <!-- Iklan Display -->
-                            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7701478875963146"
-                                data-ad-slot="8029254369" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                            <script>
-                                (adsbygoogle = window.adsbygoogle || []).push({});
-                            </script>
+                            <a href="https://clicks.pipaffiliates.com/c?c=649840&l=id&p=0">
+                                <img src="assets/img/banner/Trading_Emas_Gold_XM_Indonesia.webp" width="300"
+                                    height="250" class="card-img-top" alt="image">
+                            </a>
                         </div>
                     </div>
                 </div>
