--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -508,7 +508,7 @@
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
                             <div class="adbox adbox-300-250">
-                                <a href="https://clicks.pipaffiliates.com/c?c=649840&l=id&p=0">
+                                <a href="https://clicks.pipaffiliates.com/c?c=649840&l=id&p=0" target="_blank">
                                     <img src="assets/img/banner/Trading_Forex_Crypto_XM_Indonesia.webp" width="300"
                                         height="250" class="card-img-top" alt="image">
                                 </a>
