--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -142,7 +142,9 @@
                         <!-- Ads -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
-                                <div class="adbox adbox-300-250">
+                                <div class="adbox adbox-300-300">
+                                    <a href="https://tokopedia.link/Js8TUinYDrb" target="_blank"><img
+                                            src="assets/img/ads/Dudukan-Handphone-Tablet-Folding-Desktop-phone-stand-Holder-Mini.jpg"></a>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +219,9 @@
                         <!-- Ads -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
-                                <div class="adbox adbox-300-250">
+                                <div class="adbox adbox-300-300">
+                                    <a href="https://tokopedia.link/gb3jfWFZDrb" target="_blank"><img
+                                            src="assets/img/ads/Holder-hp-motor-spion-universal-bahan-besi-antikarat.jpg"></a>
                                 </div>
                             </div>
                         </div>
@@ -294,7 +298,9 @@
                         <!-- Ads -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
-                                <div class="adbox adbox-300-250">
+                                <div class="adbox adbox-300-300">
+                                    <a href="https://tokopedia.link/O8mh4Ee0Drb" target="_blank"><img
+                                            src="assets/img/ads/CAR-MOUNT-PHONE-HP-HOLDER-DASHBOARD-KACA-MOBIL.jpg"></a>
                                 </div>
                             </div>
                         </div>
