--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -485,16 +485,16 @@
                             </div>
                         </div>
                     </div>
-
                     <!-- Ads -->
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
-                            <div class="adbox adbox-300-250">
+                            <div class="adbox adbox-300-300">
+                                <a href="https://tokopedia.link/JVH3yCd3Drb" target="_blank"><img
+                                        src="assets/img/ads/Jas-Hujan-Setelan-Premium-All-Size-Pria-Wanita-Tebal.jpg"></a>
                             </div>
                         </div>
                     </div>
                     <!-- * Ads -->
-
                 </div>
             </div>
 
