--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-300">
-                            <a href="https://tokopedia.link/nBizYGc2Drb" target="_blank"><img
+                            <a href="https://tokopedia.link/NQw9g7nSFrb" target="_blank"><img
                                     src="assets/img/ads/Pelindung-Pintu-Mobil-Kedap-Suara-Silikon-karet-Meredam-Getaran.jpg"></a>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                 <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                     <div class="wide-block pt-2 pb-2">
                         <div class="adbox adbox-300-300">
-                            <a href="https://tokopedia.link/Un55tNb1Drb" target="_blank"><img
+                            <a href="https://tokopedia.link/KhRjoSjTFrb" target="_blank"><img
                                     src="assets/img/ads/Bagus-Anti-Bau-Mobil.jpg"></a>
                         </div>
                     </div>
