--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -143,7 +143,7 @@
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-300">
-                                    <a href="https://tokopedia.link/Js8TUinYDrb" target="_blank"><img
+                                    <a href="https://tokopedia.link/GhuGt0pTFrb" target="_blank"><img
                                             src="assets/img/ads/Dudukan-Handphone-Tablet-Folding-Desktop-phone-stand-Holder-Mini.jpg"></a>
                                 </div>
                             </div>
@@ -220,7 +220,7 @@
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-300">
-                                    <a href="https://tokopedia.link/gb3jfWFZDrb" target="_blank"><img
+                                    <a href="https://tokopedia.link/7jPlIFvTFrb" target="_blank"><img
                                             src="assets/img/ads/Holder-hp-motor-spion-universal-bahan-besi-antikarat.jpg"></a>
                                 </div>
                             </div>
@@ -299,7 +299,7 @@
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
                                 <div class="adbox adbox-300-300">
-                                    <a href="https://tokopedia.link/O8mh4Ee0Drb" target="_blank"><img
+                                    <a href="https://tokopedia.link/h2IIN2xTFrb" target="_blank"><img
                                             src="assets/img/ads/CAR-MOUNT-PHONE-HP-HOLDER-DASHBOARD-KACA-MOBIL.jpg"></a>
                                 </div>
                             </div>
