--- a/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
+++ b/public/syarat-proses-dan-cara-mutasi-balik-nama-dan-bayar-pajak-kendaraan.html
@@ -1038,10 +1038,7 @@
                     <!-- Ads -->
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
-                            <div class="adbox adbox-300-300">
-                                <a href="https://tokopedia.link/ZUU8U1GTFrb" target="_blank"><img
-                                        src="assets/img/ads/all-Black-Full-Face-Masker-Balaclava.jpg"></a>
-                            </div>
+                            <div id="ads-1" class="adbox adbox-300-300"></div>
                         </div>
                     </div>
                     <!-- * Ads -->
@@ -1197,7 +1194,10 @@
     <script src="assets/js/base.js"></script>
     <!-- Geolocation Js File -->
     <script src="assets/js/geolocation.js" async></script>
-
+    <!-- Ad-Rotaror Js File -->
+    <script src="assets/js/plugins/ad-rotator/ad-rotator.js"></script>
+    <link rel="stylesheet" href="assets/js/plugins/ad-rotator/style.css" />
+    <script src="assets/js/plugins/ad-rotator/config.js"></script>
 </body>
 
 </html>
