--- a/public/tarif-pnbp-kendaraan-bermotor.html
+++ b/public/tarif-pnbp-kendaraan-bermotor.html
@@ -488,10 +488,7 @@
                     <!-- Ads -->
                     <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                         <div class="wide-block pt-2 pb-2">
-                            <div class="adbox adbox-300-300">
-                                <a href="https://tokopedia.link/6vBamOJTFrb" target="_blank"><img
-                                        src="assets/img/ads/Jas-Hujan-Setelan-Premium-All-Size-Pria-Wanita-Tebal.jpg"></a>
-                            </div>
+                            <div id="ads-1" class="adbox adbox-300-300"></div>
                         </div>
                     </div>
                     <!-- * Ads -->
@@ -647,7 +644,10 @@
     <script src="assets/js/base.js"></script>
     <!-- Geolocation Js File -->
     <script src="assets/js/geolocation.js" async></script>
-
+    <!-- Ad-Rotaror Js File -->
+    <script src="assets/js/plugins/ad-rotator/ad-rotator.js"></script>
+    <link rel="stylesheet" href="assets/js/plugins/ad-rotator/style.css" />
+    <script src="assets/js/plugins/ad-rotator/config.js"></script>
 </body>
 
 </html>
