--- a/public/cek-pajak-kendaraan-bermotor-online.html
+++ b/public/cek-pajak-kendaraan-bermotor-online.html
@@ -142,10 +142,7 @@
                         <!-- Ads -->
                         <div class="section inset mt-2" style="margin-bottom: 16px !important;">
                             <div class="wide-block pt-2 pb-2">
-                                <div class="adbox adbox-300-300">
-                                    <a href="https://tokopedia.link/GhuGt0pTFrb" target="_blank"><img
-                                            src="assets/img/ads/Dudukan-Handphone-Tablet-Folding-Desktop-phone-stand-Holder-Mini.jpg"></a>
-                                </div>
+                                <div id="ads-1" class="adbox adbox-300-300"></div>
                             </div>
                         </div>
                         <!-- * Ads -->
@@ -524,6 +521,10 @@
     <script src="assets/js/base.js"></script>
     <!-- Geolocation Js File -->
     <script src="assets/js/geolocation.js" async></script>
+    <!-- Ad-Rotaror Js File -->
+    <script src="assets/js/plugins/ad-rotator/ad-rotator.js"></script>
+    <link rel="stylesheet" href="assets/js/plugins/ad-rotator/style.css" />
+    <script src="assets/js/plugins/ad-rotator/config.js"></script>
 
 </body>
 
